# mp3tagger_python

./: .gitignore  README.md  pyproject.toml  requirements.txt
mp3tagger/: __init__.py  __main__.py  __main_old__.py  logger.py
mp3tagger/classes/: mp3_tagger.py  my_slider.py  my_slider_old.py  section_editor.py  section_editor_window.py
mp3tagger/classes/data/: sections_config.json
mp3tagger/data/: constants.py  sections.py
mp3tagger/data/views/: a20 writing 2024-10-25 15_20_20241025_152058.json  default.json  sections_config.json
mp3tagger/scripts/: automate.py  bpm.py  builders.py
mp3tagger/widgets/: tkSliderWidget.py
